// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Conversion of newsdoc to yMap document transforms newsDoc to yPlanning 1`] = `
Object {
  "links": Object {
    "tt/sector": Array [
      Object {
        "content": Object {},
        "contentType": "",
        "data": Object {},
        "id": "",
        "links": Object {},
        "meta": Object {},
        "name": "",
        "rel": "sector",
        "role": "",
        "title": "Sport",
        "type": "tt/sector",
        "uri": "sector://spt",
        "url": "",
        "uuid": "a36ff853-9fb3-5950-8893-64ac699f5481",
        "value": "SPT",
      },
    ],
  },
  "meta": Object {
    "core/assignment": Array [
      Object {
        "content": Object {},
        "contentType": "",
        "data": Object {
          "end": "2024-02-09T22:59:59Z",
          "end_date": "2024-02-09",
          "full_day": "true",
          "public": "true",
          "publish": "2024-02-09T10:30:00Z",
          "start": "2024-02-08T23:00:00Z",
          "start_date": "2024-02-09",
        },
        "id": "97464374-3d0c-44b9-9126-f5efadbd32a7",
        "links": Object {
          "core/article": Array [
            Object {
              "content": Object {},
              "contentType": "",
              "data": Object {},
              "id": "",
              "links": Object {},
              "meta": Object {},
              "name": "",
              "rel": "deliverable",
              "role": "",
              "title": "",
              "type": "core/article",
              "uri": "",
              "url": "",
              "uuid": "f283c9a0-6a2e-4021-a009-087961dd032f",
              "value": "",
            },
            Object {
              "content": Object {},
              "contentType": "",
              "data": Object {},
              "id": "",
              "links": Object {},
              "meta": Object {},
              "name": "",
              "rel": "deliverable",
              "role": "",
              "title": "",
              "type": "core/article",
              "uri": "",
              "url": "",
              "uuid": "fa5e6fbf-c03d-4447-8a1f-550176979a48",
              "value": "",
            },
          ],
          "core/author": Array [
            Object {
              "content": Object {},
              "contentType": "",
              "data": Object {},
              "id": "",
              "links": Object {},
              "meta": Object {},
              "name": "John Doe/TT",
              "rel": "assignee",
              "role": "primary",
              "title": "",
              "type": "core/author",
              "uri": "",
              "url": "",
              "uuid": "c37fdf3e-72ff-4e22-8b9f-1af0d60b0cd9",
              "value": "",
            },
            Object {
              "content": Object {},
              "contentType": "",
              "data": Object {},
              "id": "",
              "links": Object {},
              "meta": Object {},
              "name": "Jane Doe/TT",
              "rel": "assignee",
              "role": "primary",
              "title": "",
              "type": "core/author",
              "uri": "",
              "url": "",
              "uuid": "f23c55de-5e52-428e-9ed7-0cdc0921f60a",
              "value": "",
            },
          ],
        },
        "meta": Object {
          "core/assignment-type": Array [
            Object {
              "content": Object {},
              "contentType": "",
              "data": Object {},
              "id": "",
              "links": Object {},
              "meta": Object {},
              "name": "",
              "rel": "",
              "role": "",
              "title": "",
              "type": "core/assignment-type",
              "uri": "",
              "url": "",
              "uuid": "",
              "value": "text",
            },
          ],
          "tt/slugline": Array [
            Object {
              "content": Object {},
              "contentType": "",
              "data": Object {},
              "id": "",
              "links": Object {},
              "meta": Object {},
              "name": "",
              "rel": "",
              "role": "",
              "title": "",
              "type": "tt/slugline",
              "uri": "",
              "url": "",
              "uuid": "",
              "value": "lands-tomasson",
            },
          ],
        },
        "name": "",
        "rel": "",
        "role": "",
        "title": "Kortare text utsänd. Uppdateras",
        "type": "core/assignment",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
    ],
    "core/planning-item": Array [
      Object {
        "content": Object {},
        "contentType": "",
        "data": Object {
          "end_date": "2024-02-09",
          "priority": "4",
          "public": "true",
          "start_date": "2024-02-09",
          "tentative": "false",
        },
        "id": "",
        "links": Object {},
        "meta": Object {},
        "name": "",
        "rel": "",
        "role": "",
        "title": "",
        "type": "core/planning-item",
        "uri": "",
        "url": "",
        "uuid": "",
        "value": "",
      },
    ],
  },
  "root": Object {
    "content": Array [],
    "language": "sv-se",
    "title": "Tomasson lämnar Blackburn – för landslaget?",
    "type": "core/planning-item",
    "uri": "core://newscoverage/726045e7-a52b-4737-8fba-c8149f7e2c2d",
    "url": "",
    "uuid": "726045e7-a52b-4737-8fba-c8149f7e2c2d",
  },
}
`;

exports[`Conversion of newsdoc to yMap document transforms yPlanning to newsDoc 1`] = `
Object {
  "content": Array [],
  "language": "sv-se",
  "links": Array [
    Object {
      "content": Array [],
      "contentType": "",
      "data": Object {},
      "id": "",
      "links": Array [],
      "meta": Array [],
      "name": "",
      "rel": "sector",
      "role": "",
      "title": "Sport",
      "type": "tt/sector",
      "uri": "sector://spt",
      "url": "",
      "uuid": "a36ff853-9fb3-5950-8893-64ac699f5481",
      "value": "SPT",
    },
  ],
  "meta": Array [
    Object {
      "content": Array [],
      "contentType": "",
      "data": Object {
        "end_date": "2024-02-09",
        "priority": "4",
        "public": "true",
        "start_date": "2024-02-09",
        "tentative": "false",
      },
      "id": "",
      "links": Array [],
      "meta": Array [],
      "name": "",
      "rel": "",
      "role": "",
      "title": "",
      "type": "core/planning-item",
      "uri": "",
      "url": "",
      "uuid": "",
      "value": "",
    },
    Object {
      "content": Array [],
      "contentType": "",
      "data": Object {
        "end": "2024-02-09T22:59:59Z",
        "end_date": "2024-02-09",
        "full_day": "true",
        "public": "true",
        "publish": "2024-02-09T10:30:00Z",
        "start": "2024-02-08T23:00:00Z",
        "start_date": "2024-02-09",
      },
      "id": "97464374-3d0c-44b9-9126-f5efadbd32a7",
      "links": Array [
        Object {
          "content": Array [],
          "contentType": "",
          "data": Object {},
          "id": "",
          "links": Array [],
          "meta": Array [],
          "name": "John Doe/TT",
          "rel": "assignee",
          "role": "primary",
          "title": "",
          "type": "core/author",
          "uri": "",
          "url": "",
          "uuid": "c37fdf3e-72ff-4e22-8b9f-1af0d60b0cd9",
          "value": "",
        },
        Object {
          "content": Array [],
          "contentType": "",
          "data": Object {},
          "id": "",
          "links": Array [],
          "meta": Array [],
          "name": "Jane Doe/TT",
          "rel": "assignee",
          "role": "primary",
          "title": "",
          "type": "core/author",
          "uri": "",
          "url": "",
          "uuid": "f23c55de-5e52-428e-9ed7-0cdc0921f60a",
          "value": "",
        },
        Object {
          "content": Array [],
          "contentType": "",
          "data": Object {},
          "id": "",
          "links": Array [],
          "meta": Array [],
          "name": "",
          "rel": "deliverable",
          "role": "",
          "title": "",
          "type": "core/article",
          "uri": "",
          "url": "",
          "uuid": "f283c9a0-6a2e-4021-a009-087961dd032f",
          "value": "",
        },
        Object {
          "content": Array [],
          "contentType": "",
          "data": Object {},
          "id": "",
          "links": Array [],
          "meta": Array [],
          "name": "",
          "rel": "deliverable",
          "role": "",
          "title": "",
          "type": "core/article",
          "uri": "",
          "url": "",
          "uuid": "fa5e6fbf-c03d-4447-8a1f-550176979a48",
          "value": "",
        },
      ],
      "meta": Array [
        Object {
          "content": Array [],
          "contentType": "",
          "data": Object {},
          "id": "",
          "links": Array [],
          "meta": Array [],
          "name": "",
          "rel": "",
          "role": "",
          "title": "",
          "type": "tt/slugline",
          "uri": "",
          "url": "",
          "uuid": "",
          "value": "lands-tomasson",
        },
        Object {
          "content": Array [],
          "contentType": "",
          "data": Object {},
          "id": "",
          "links": Array [],
          "meta": Array [],
          "name": "",
          "rel": "",
          "role": "",
          "title": "",
          "type": "core/assignment-type",
          "uri": "",
          "url": "",
          "uuid": "",
          "value": "text",
        },
      ],
      "name": "",
      "rel": "",
      "role": "",
      "title": "Kortare text utsänd. Uppdateras",
      "type": "core/assignment",
      "uri": "",
      "url": "",
      "uuid": "",
      "value": "",
    },
  ],
  "title": "Tomasson lämnar Blackburn – för landslaget?",
  "type": "core/planning-item",
  "uri": "core://newscoverage/726045e7-a52b-4737-8fba-c8149f7e2c2d",
  "url": "",
  "uuid": "726045e7-a52b-4737-8fba-c8149f7e2c2d",
}
`;
